--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!--타임리프 및 스프링 시큐리티 확장 네임스페이스 사용-->
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>게시판</title>
     <style>
+        #container {
+            max-width: 940px;
+        }
 
         h1 {
             font-size: 3em;
@@ -23,6 +28,16 @@
 
         #write > button {
             float: right;
+        }
+
+        #content table a{
+            text-decoration: none;
+            color: black;
+        }
+
+        #content a:hover {
+            color: #0d6efd;
+            text-decoration: underline;
         }
 
     </style>
@@ -97,7 +112,7 @@
         따로 지정해줘야 되는거 같아서 그냥 nav-css 에다가 60px 로 선언함-->
 <!--<body class="pt-5">-->
 <body>
-<div id="container" class="container-lg">
+<div id="container" class="container">
 
     <nav th:replace="fragment/fragment.html :: nav-fragment">
     </nav>
