--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<!--타임리프 및 스프링 시큐리티 확장 네임스페이스 사용-->
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -355,7 +356,7 @@
                 $.ajax({
                     type: "post",
                     async: false,
-                    url: "/comment/update/" + commentId,
+                    url: "/comment/edit/" + commentId,
                     data: {content: content},
                     success: function (resp) {
 
@@ -583,10 +584,10 @@
                 <div class="is-reply" th:if="${comment.groupDepth > 0}"></div>
             </div>
         </div>
-        <div id="myComment" th:if="${session.loginMember != null}">
+        <div id="myComment" sec:authorize="isAuthenticated()">
             <form id="myCommentForm" class="input-group" th:action="@{/comment/write}" method="post">
-                <input type="hidden" class="myWriter form-control" value="myWriter" name="writer" th:value="${session.loginMember.getUsername()}">
-                <span class="input-group-text comment-username bg-primary text-white flex-fill" th:text="${session.loginMember.getUsername()}">username</span>
+                <input type="hidden" class="myWriter form-control" value="myWriter" name="writer" th:value="${#authentication.name}">
+                <span class="input-group-text comment-username bg-primary text-white flex-fill" th:text="${#authentication.name}">username</span>
                 <div class="input-group">
                     <textarea class="comment-content form-control form-control-sm" name="content" placeholder="댓글을 입력하세요" required maxlength="50"></textarea>
                     <button class="btn btn-outline-secondary comment-submit" type="submit">등록</button>
